Add quiz CRUD API endpoints for teachers
